<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/header" >

        <TextView
            android:id="@+id/text_inbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/compose"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="gotoInbox"
            android:text="@string/back" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/yourCred" />

    <EditText
        android:id="@+id/text_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_hello"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/sender_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_to"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/subject" />

    <EditText
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_subject"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/message_body" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_message"
        android:layout_centerHorizontal="true"
        android:text="@string/send_mail" />

</RelativeLayout>