<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

   
    <TextView
        android:id="@+id/text_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/checking_login" />
    
    <Button
        android:id="@+id/btn_twitter_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_gmail_login"
        android:layout_centerHorizontal="true"
        android:onClick="TweeterLoginClick"
        android:text="@string/twitter_login" />

    <Button
        android:id="@+id/btn_hotmail_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_password"
        android:layout_below="@+id/text_password"
        android:onClick="HotmailLoginClick"
        android:text="@string/hotmail" />

    <Button
        android:id="@+id/btn_gmail_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_password"
        android:layout_toRightOf="@+id/btn_hotmail_login"
        android:onClick="GmailLoginClick"
        android:text="@string/gmail" />

</RelativeLayout>