<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/header" >

        <TextView
            android:id="@+id/text_inbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/inbox"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compose"
            android:layout_alignParentRight="true"
            android:onClick="gotoCompose"
             />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/loading_messages"
        android:textColor="#009AD4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/listview_inbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:divider="#DDDDDD"
        android:dividerHeight="1dp"
        tools:listitem="@layout/inbox_item" >
    </ListView>

</RelativeLayout>